manifest/appmesh/init.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: appmeshload
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: front
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: appmeshload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: app
          image:  zhaojiew/appmeshload:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: blue
  namespace: appmeshload
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: blue
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: appmeshload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
      version: v1
  template:
    metadata:
      labels:
        app: blue
        version: v1
    spec:
      containers:
        - name: app
          image:  zhaojiew/appmeshload:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: red
  namespace: appmeshload
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: red
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: appmeshload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: red
      version: v1
  template:
    metadata:
      labels:
        app: red
        version: v1
    spec:
      containers:
        - name: app
          image: zhaojiew/appmeshload:latest
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: apple
  namespace: appmeshload
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: apple
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
  namespace: appmeshload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
      version: v1
  template:
    metadata:
      labels:
        app: apple
        version: v1
    spec:
      containers:
        - name: app
          image:  zhaojiew/appmeshload:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
---
# banana
apiVersion: v1
kind: Service
metadata:
  name: banana
  namespace: appmeshload
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: banana
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana
  namespace: appmeshload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
      version: v1
  template:
    metadata:
      labels:
        app: banana
        version: v1
    spec:
      containers:
        - name: app
          image: zhaojiew/appmeshload:latest
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: color
  namespace: appmeshload
  labels:
    app: color
spec:
  ports:
    - port: 8090
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: fruit
  namespace: appmeshload
  labels:
    app: fruit
spec:
  ports:
    - port: 8090
      name: http
