manifest/appmesh/mesh_resource_traffic_5v5.yaml
---
# virtual service
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: front
  namespace: appmeshload
spec:
  awsName: front.appmeshload.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: front
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: fruit
  namespace: appmeshload
spec:
  awsName: fruit.appmeshload.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: fruit-router
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color
  namespace: appmeshload
spec:
  awsName: color.appmeshload.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color-router
